# nrf52-freertos-helloworld

./: CMakeLists.txt  LICENSE  README.md  cmake.sh
app/ble_app_hrs_freertos/: #CMakeLists.txt#  .#CMakeLists.txt  bspstub.c  main.c
app/ble_app_hrs_freertos/config/ble_app_hrs_freertos_pca10040_s132/: FreeRTOSConfig.h
app/blinky/: CMakeLists.txt  cmake.sh
app/blinky_freertos/: CMakeLists.txt  bspstub.c
app/blinky_freertos/config/blinky_FreeRTOS_pca10040/: FreeRTOSConfig.h
app/helloworld/: CMakeLists.txt
cmake/: arm-toolchain.cmake  arm-toolchain.cmake~  depends.cmake
cmake/nrf52lib/: nrf52lib.cmake  post-build.cmake
cmake/nrf52lib/components/ble/: ble.cmake
cmake/nrf52lib/components/device/: device.cmake  device.cmake~
cmake/nrf52lib/components/drivers_nrf/: drivers-nrf.cmake
cmake/nrf52lib/components/libraries/: libraries.cmake
cmake/nrf52lib/components/softdevice/: softdevice.cmake
cmake/nrf52lib/components/toolchain/: toolchain.cmake  toolchain.cmake~
